# Kathryn-I

./: .gitignore  README.md  README.md.backup  READMEOld.md
SPECIFICATION/: .~lock.Block_Description.ods#  .~lock.core_spec.ods#  .~lock.core_spec_cleaned.xlsx#  Block_Description.ods  Flow_Logic.ods  Work_note.md  core_diagram.drawio  core_spec (copy).ods  core_spec.csv  core_spec.ods  core_spec.xml  core_spec_block.csv  core_spec_block2.csv  core_spec_cleaned.xlsx  core_spec_cleaned.xml
SPECIFICATION/old/: .~lock.Block_Description.ods#  Block_Description.ods  core_spec.ods  core_spec5.fods  core_spec5.xlt
Source/Alu/pip0/: Execute.v  Mul.v
Source/Alu_pip0/: Execute.v
Source/Decode/: Decode.v
Source/Reservation_station/TEMPLATE/: Resv.v  Resv_cell.v  Resv_cell_pip3.v
Source/TEMPLATE/Int/: Sign_ext.v
playground/: LICENSE.txt  build.sbt  md.anno.json  md.fir  md.v
src/: INSTRUCTION_PAGE_WALKER.anno.json  INSTRUCTION_PAGE_WALKER.fir  INSTRUCTION_PAGE_WALKER.v  build.sbt
src/.bsp/: sbt.json
utils/generator/: CMakeLists.txt  config.txt  main.cpp
utils/generator/object/: genObject.cpp  genObject.h
utils/generator/object/bundle/: bundle.cpp  bundle.h
utils/generator/object/interface/: interface.cpp  interface.h
utils/generator/object/module/: module.cpp  module.h
utils/generator/object/variable/: nestvar.cpp  nestvar.h  variable.cpp  variable.h
utils/generator/service/controller/: controller.cpp  controller.h
utils/generator/service/file/: codeTransfer.cpp  codeTransfer.h  file_mgr.cpp  file_mgr.h
utils/generator/service/ioHelp/: ioh.cpp  ioh.h
(+78 files in other folders)
